--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="update">Update</string>
-    <string name="submitToSSP">Submit To SSP</string>
+    <string name="Expose">Expose Context</string>
     <string name="description">Description</string>
     <string name="subscribetoplugins">Subscribe To Plug Ins</string>
     <string name="updateintervall">Update OIntervall (in seconds)</string>
